# cosmic-engine

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  skills-lock.json  tsconfig.json
backend/: .env.example  .gitignore  Dockerfile  build.mjs  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/scripts/: .dockerignore  .gitignore  Dockerfile  README.md  api.py  pyproject.toml  requirements.txt  utils.py
frontend/: .env.example  .gitignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AttachmentList.tsx  AttachmentSelector.tsx  AuthCallbackHandler.tsx  BM25FileSelector.tsx  BM25ProgressCard.tsx  CacheViewerModal.tsx  ChatComposer.tsx  ChatInput.tsx  ChatMessage.tsx  ChunkViewer.tsx  CitationButton.tsx  DocxViewer.tsx  DropZone.tsx  ErrorBoundary.tsx  FilePanel.tsx  FileUploadButton.tsx  FileViewer.tsx  GitHubButton.tsx  HelpContent.tsx  ImageViewer.tsx  LoginForm.tsx  LogsPanel.tsx  MessageContent.tsx  NavMain.tsx  NavUser.tsx  OAuthButtons.tsx  PDFViewer.tsx  PresentationViewer.tsx  Providers.tsx  SessionList.tsx  Sidebar.tsx  SmoothScroll.tsx  SpreadsheetViewer.tsx  StreamingMessageContent.tsx  SystemMessage.tsx  TextViewer.tsx  ThemeToggle.tsx  TimingBreakdownModal.tsx  app-sidebar.tsx  login-form.tsx  (+3 more)
frontend/contexts/: FileViewerContext.tsx  PendingSessionUploadsContext.tsx  SessionEventsContext.tsx
frontend/hooks/: use-auth.ts  use-cache.ts  use-search.ts  (+9 more)
src/: index.ts
(+154 files in other folders)
